chapter 8: Basic Login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,6 +46,11 @@ en:
       home: Home
       help: Help
       login: Log in
+      logout: Log out
+      users: Users
+      account: Account
+      profile: Profile
+      settings: Settings
   users:
     new:
       title: Sign Up
@@ -58,10 +63,21 @@ en:
       create: Create my account
   shared:
     error_messages:
-      error: "error"
-      form_contain: "The form contains"
+      error: error
+      form_contain: The form contains
+  sessions:
+    new:
+      email: Email
+      login: Log in
+      logout_first: Please log out current account first
+      non_account: Don't have an account.
+      password: Password
+      signupnow: Sign up now!
+      new_user: New_user?
+    create:
+      success: Welcome to the Sample App!
+      error: Invalid email/password combination
   english: English
   vietnam: Vietnamese
   title: Ruby on Rails Tutorial Sample App
-  success: Welcome to the Sample App!
-  error: Error
+  success: You registered successfully!
